<?xml version="1.0"?>
<package format="2">
  <name>tof_demo</name>
  <version>0.1.0</version>
  <description>HM-LD1 ToF point-cloud reverse driving auto brake node.</description>

  <maintainer email="agilex@example.com">agilex</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
